# Test

./: Documentation.md  README.md
slim-ir/: IR.cpp  Instructions.cpp  run_ir_lib.sh
slim-ir/include/: IR.h
slim-use/: CMakeLists.txt  clean.sh  complete_run.sh  main.cpp  make_build.sh  make_slim_ll_files.sh  run.sh
slim-use/samples/: test1.c  test1.ll  test1.slim.ll
test/: add.c  add.ll
